--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@theme {
+  --font-poppins: 'Poppins', 'sans-serif';  
+
+  --color-putih: #ffffff;
+  --color-hitam: #0d1333;
+  --color-ashGray1 : #eff2fa;
+  --color-ashGray2 : #252947;
+}
